--- a/index.html
+++ b/index.html
@@ -1,20 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Movie - Download</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hello Movie - Download APK</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #1a1a1a, #2d2d2d);
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      min-height: 150vh; /* 1.5 screen height */
+    }
+
+    .container {
+      padding: 80px 20px;
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.3rem;
+      color: #ccc;
+      margin-bottom: 40px;
+    }
+
+    .download-btn {
+      display: inline-block;
+      background-color: #e53935;
+      color: white;
+      padding: 15px 35px;
+      font-size: 1.1rem;
+      border: none;
+      border-radius: 10px;
+      text-decoration: none;
+      transition: background 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .download-btn:hover {
+      background-color: #c62828;
+    }
+
+    .spacer {
+      flex: 1;
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px 0;
+      color: #aaa;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-white flex items-center justify-center min-h-screen">
-    <div class="text-center p-6 max-w-md mx-auto">
-        <h1 class="text-4xl font-bold mb-4">🎬 Hello Movie App</h1>
-        <p class="mb-6 text-lg">Enjoy the latest movies and shows in one click. Download the APK now!</p>
-        <a href="https://www.mediafire.com/file/your_apk_file.apk/file" 
-           class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded inline-block"
-           download>
-            📥 Download APK
-        </a>
-    </div>
+<body>
+
+  <div class="container">
+    <h1>Download Hello Movie APK</h1>
+    <p>Enjoy unlimited access to latest movies and series. Click below to get the Hello Movie app instantly.</p>
+
+    <!-- ✅ Make sure 'vega.apk' is in the same folder as this HTML -->
+    <a class="download-btn" href="vega.apk" download>
+      Download Now
+    </a>
+  </div>
+
+  <div class="spacer"></div>
+
+  <footer>&copy; 2025 Hello Movie. All rights reserved.</footer>
+
 </body>
 </html>
