--- a/index.html
+++ b/index.html
@@ -1,83 +1,373 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hello Movie - Download APK</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #1a1a1a, #2d2d2d);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      min-height: 150vh; /* 1.5 screen height */
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello Movie - Your Ultimate Entertainment</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(to bottom right, #ff0000, #d3d3d3); /* Red to Light Gray Gradient */
+            color: #ffffff;
+            overflow-x: hidden; /* Prevent horizontal scrolling */
+            scroll-behavior: smooth; /* Smooth scrolling for navigation */
+        }
+        .background-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.5); /* A consistent dark overlay for readability */
+            z-index: -1;
+        }
+        .background-image-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+            z-index: -2; /* Ensure background is behind everything */
+        }
+        .background-image {
+            position: absolute;
+            opacity: 0.15; /* Slightly less opaque for a subtle background */
+            filter: blur(4px); /* More blur for a softer effect */
+            min-width: 100%;
+            min-height: 100%;
+            object-fit: cover;
+            animation: fadeIn 3s ease-in-out forwards, panBackground 40s linear infinite alternate; /* Fade in and slow pan */
+        }
 
-    .container {
-      padding: 80px 20px;
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: center;
-    }
+        /* Specific positions for each image for a layered effect */
+        .image-1 { top: 0; left: 0; width: 100%; height: 100%; transform: scale(1.1); }
+        .image-2 { top: 20%; left: 20%; width: 80%; height: 80%; transform: rotate(5deg) scale(1.2); }
+        .image-3 { top: -10%; right: -10%; width: 120%; height: 120%; transform: rotate(-10deg) scale(1.3); }
 
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-    }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 0.15; }
+        }
 
-    p {
-      font-size: 1.3rem;
-      color: #ccc;
-      margin-bottom: 40px;
-    }
+        @keyframes panBackground {
+            0% { transform: scale(1.1) translate(0, 0); }
+            100% { transform: scale(1.3) translate(-5%, 5%); }
+        }
 
-    .download-btn {
-      display: inline-block;
-      background-color: #e53935;
-      color: white;
-      padding: 15px 35px;
-      font-size: 1.1rem;
-      border: none;
-      border-radius: 10px;
-      text-decoration: none;
-      transition: background 0.3s ease;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    }
+        .section-container {
+            background-color: rgba(0, 0, 0, 0.6); /* Slightly more opaque overlay */
+            backdrop-filter: blur(10px); /* Stronger frosted glass effect */
+            border-radius: 2rem; /* More rounded corners */
+            padding: 3.5rem 2.5rem;
+            margin-bottom: 3rem; /* More space between sections */
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5); /* Stronger shadow */
+            transition: transform 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
+            border: 1px solid rgba(255, 255, 255, 0.1); /* Subtle border */
+        }
+        .section-container:hover {
+            transform: translateY(-8px); /* More pronounced lift */
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8); /* Even stronger shadow on hover */
+        }
 
-    .download-btn:hover {
-      background-color: #c62828;
-    }
+        .download-button {
+            transition: all 0.4s ease;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+            background-size: 200% auto;
+            background-image: linear-gradient(to right, #6366f1 0%, #a855f7 50%, #6366f1 100%); /* Purple to Indigo gradient */
+            position: relative;
+            overflow: hidden;
+        }
+        .download-button:hover {
+            background-position: right center; /* Shift gradient on hover */
+            transform: translateY(-7px) scale(1.03); /* More pronounced scale and lift */
+            box-shadow: 0 12px 25px rgba(0, 0, 0, 0.4);
+        }
+        .download-button:active {
+            transform: translateY(0);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+        .download-button::before { /* Subtle glow effect */
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            transition: width 0.4s ease, height 0.4s ease, opacity 0.4s ease;
+        }
+        .download-button:hover::before {
+            width: 200%;
+            height: 200%;
+            opacity: 1;
+        }
 
-    .spacer {
-      flex: 1;
-    }
+        /* Hero title text shadow */
+        .hero-title-shadow {
+            text-shadow: 0 5px 15px rgba(0, 0, 0, 0.7);
+        }
 
-    footer {
-      text-align: center;
-      padding: 30px 0;
-      color: #aaa;
-      font-size: 0.9rem;
-    }
-  </style>
+        /* Scroll Down Indicator */
+        .scroll-down-indicator {
+            position: absolute;
+            bottom: 2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            animation: bounce 2s infinite;
+            cursor: pointer;
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0) translateX(-50%);
+            }
+            40% {
+                transform: translateY(-10px) translateX(-50%);
+            }
+            60% {
+                transform: translateY(-5px) translateX(-50%);
+            }
+        }
+
+        /* Custom Modal Styles */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1000; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgba(0,0,0,0.8); /* Darker overlay for modal */
+            backdrop-filter: blur(8px);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #2a2a3e; /* Darker background for modal */
+            margin: auto;
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 15px 35px rgba(0,0,0,0.6);
+            width: 90%;
+            max-width: 450px;
+            text-align: center;
+            position: relative;
+            animation: slideIn 0.4s ease-out;
+            border: 1px solid rgba(255, 255, 255, 0.15);
+        }
+
+        @keyframes slideIn {
+            from { transform: translateY(-80px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
+        }
+
+        .close-button {
+            color: #ccc;
+            position: absolute;
+            top: 15px;
+            right: 20px;
+            font-size: 32px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: color 0.2s ease;
+        }
+
+        .close-button:hover,
+        .close-button:focus {
+            color: #fff;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* Responsive adjustments */
+        @media (min-width: 768px) {
+            .section-container {
+                padding: 4rem 3rem;
+            }
+        }
+    </style>
 </head>
-<body>
+<body class="flex flex-col items-center justify-start min-h-screen">
 
-  <div class="container">
-    <h1>Download Hello Movie APK</h1>
-    <p>Enjoy unlimited access to latest movies and series. Click below to get the Hello Movie app instantly.</p>
+    <!-- Fixed Notice Bar -->
+    <div id="topNotice" class="fixed top-0 left-0 w-full bg-yellow-600 text-yellow-50 text-center py-3 px-4 z-50 flex items-center justify-center shadow-lg">
+        <p class="text-sm md:text-base font-semibold">
+            <span class="mr-2">&#9888;</span> Important: After clicking "Download APK", please click the "Download" button on the new page to get your file.
+        </p>
+        <button id="closeNoticeBtn" class="ml-4 text-yellow-50 hover:text-white transition duration-200 text-xl font-bold">
+            &times;
+        </button>
+    </div>
 
-    <!-- ✅ Make sure 'vega.apk' is in the same folder as this HTML -->
-    <a class="download-btn" href="vega.apk" download>
-      Download Now
-    </a>
-  </div>
+    <!-- Background Images Container -->
+    <div class="background-image-container">
+        <img src="/__files/uploaded:s1.jpeg-35bc39ab-dd88-492a-bf50-8e426811974e" alt="Abstract Background 1" class="background-image image-1">
+        <img src="/__files/uploaded:s2.jpeg-7815c6e4-3383-461a-a104-63fc042ce393" alt="Abstract Background 2" class="background-image image-2">
+        <img src="/__files/uploaded:Screenshot_2025-07-15-10-14-35-389_com.vega.jpg-bec29354-a603-4337-97ba-f2e5ac7b227c" alt="Abstract Background 3" class="background-image image-3">
+    </div>
+    <div class="background-overlay"></div>
 
-  <div class="spacer"></div>
+    <!-- Navigation Bar -->
+    <nav class="w-full bg-transparent py-4 px-6 flex justify-center sticky top-0 z-40">
+        <ul class="flex space-x-8 text-lg font-medium">
+            <li><a href="#hero" class="hover:text-purple-400 transition duration-300">Home</a></li>
+            <li><a href="#about" class="hover:text-purple-400 transition duration-300">About</a></li>
+        </ul>
+    </nav>
 
-  <footer>&copy; 2025 Hello Movie. All rights reserved.</footer>
+    <!-- Main Content Sections -->
+    <main class="container mx-auto px-4 py-16 flex flex-col items-center justify-center space-y-16 z-10 pt-24"> <!-- Added pt-24 to main -->
 
+        <!-- Hero Section -->
+        <section id="hero" class="section-container w-full max-w-5xl text-center relative">
+            <h1 class="text-7xl md:text-8xl lg:text-9xl font-extrabold mb-8 tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-600 hero-title-shadow">
+                Hello Movie
+            </h1>
+            <p class="text-xl md:text-2xl lg:text-3xl mb-12 leading-relaxed text-gray-200 max-w-2xl mx-auto">
+                Your ultimate destination for endless entertainment. Stream, download, and discover a world of cinematic wonders!
+            </p>
+            <a href="https://www.mediafire.com/file/dwyfrya8qn1kuw0/app-release.apk/file" id="downloadLink" class="download-button text-white font-bold py-5 px-14 rounded-full text-2xl md:text-3xl uppercase tracking-wider shadow-lg inline-flex items-center justify-center" target="_blank" rel="noopener noreferrer">
+                <svg class="w-8 h-8 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+                </svg>
+                <span>Download APK</span>
+            </a>
+            <p class="mt-8 text-sm text-gray-400">
+                (Optimized for Android devices - Approx. 50 MB)
+            </p>
+
+            <!-- Scroll Down Indicator -->
+            <div class="scroll-down-indicator">
+                <p class="text-gray-400 text-sm mb-2">Scroll Down</p>
+                <svg class="w-8 h-8 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+                </svg>
+            </div>
+        </section>
+
+        <!-- Why Choose Us Section -->
+        <section id="about" class="section-container w-full max-w-5xl">
+            <h2 class="text-5xl md:text-6xl font-bold text-center mb-12 text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-orange-600 hero-title-shadow">
+                Why Choose Hello Movie?
+            </h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 text-lg">
+                <!-- Feature 1 -->
+                <div class="flex flex-col items-center text-center p-6 bg-gray-900 bg-opacity-50 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 border border-gray-700">
+                    <svg class="w-12 h-12 text-yellow-500 mb-4" fill="currentColor" viewBox="0 0 20 20">
+                        <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                    <h3 class="font-semibold text-2xl mb-2 text-yellow-300">Vast Library</h3>
+                    <p class="text-gray-300 text-base">Access thousands of movies and TV shows across all genres, updated regularly for you.</p>
+                </div>
+                <!-- Feature 2 -->
+                <div class="flex flex-col items-center text-center p-6 bg-gray-900 bg-opacity-50 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 border border-gray-700">
+                    <svg class="w-12 h-12 text-pink-500 mb-4" fill="currentColor" viewBox="0 0 20 20">
+                        <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                    <h3 class="font-semibold text-2xl mb-2 text-pink-300">HD Streaming</h3>
+                    <p class="text-gray-300 text-base">Enjoy seamless streaming in stunning HD and 4K resolution with adaptive quality.</p>
+                </div>
+                <!-- Feature 3 -->
+                <div class="flex flex-col items-center text-center p-6 bg-gray-900 bg-opacity-50 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 border border-gray-700">
+                    <svg class="w-12 h-12 text-teal-500 mb-4" fill="currentColor" viewBox="0 0 20 20">
+                        <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                    <div>
+                        <h3 class="font-semibold text-2xl mb-2 text-teal-300">Offline Access</h3>
+                        <p class="text-gray-300 text-base">Download your favorite content to watch anytime, anywhere, even without internet.</p>
+                    </div>
+                </div>
+                <!-- Feature 4 -->
+                <div class="flex flex-col items-center text-center p-6 bg-gray-900 bg-opacity-50 rounded-xl shadow-lg transform hover:scale-105 transition duration-300 border border-gray-700">
+                    <svg class="w-12 h-12 text-indigo-500 mb-4" fill="currentColor" viewBox="0 0 20 20">
+                        <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                    </svg>
+                    <div>
+                        <h3 class="font-semibold text-2xl mb-2 text-indigo-300">Intuitive UI</h3>
+                        <p class="text-gray-300 text-base">Navigate effortlessly with our sleek, modern, and user-friendly interface design.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <!-- Footer -->
+    <footer class="w-full text-center py-8 text-gray-500 text-sm mt-auto z-10">
+        &copy; 2025 Hello Movie. All rights reserved.
+    </footer>
+
+    <!-- Custom Download Confirmation Modal -->
+    <div id="downloadModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" id="closeModalBtn">&times;</span>
+            <h2 class="text-3xl font-bold mb-4 text-white">Download Instructions</h2>
+            <p class="text-gray-300 mb-6 text-lg">
+                A new tab has opened with the download page.
+                Please click the **"Download"** button on that page to get your **"vega.apk"** file.
+            </p>
+            <p class="text-gray-400 text-sm">
+                If the new tab didn't open, please check your browser's pop-up settings or click the "Download APK" button again.
+            </p>
+        </div>
+    </div>
+
+    <script>
+        document.getElementById('downloadLink').addEventListener('click', function(event) {
+            // No preventDefault() here, let the browser handle the link opening in a new tab
+            // The target="_blank" and rel="noopener noreferrer" attributes on the <a> tag will do the job.
+
+            // Show the custom modal
+            document.getElementById('downloadModal').style.display = 'flex';
+        });
+
+        // Close modal when close button is clicked
+        document.getElementById('closeModalBtn').addEventListener('click', function() {
+            document.getElementById('downloadModal').style.display = 'none';
+        });
+
+        // Close modal when clicking outside of the modal content
+        window.addEventListener('click', function(event) {
+            const modal = document.getElementById('downloadModal');
+            if (event.target == modal) {
+                modal.style.display = 'none';
+            }
+        });
+
+        // Close the top notice bar
+        document.getElementById('closeNoticeBtn').addEventListener('click', function() {
+            document.getElementById('topNotice').style.display = 'none';
+            // Adjust main content padding if the notice is dismissed
+            document.querySelector('main').style.paddingTop = '4rem'; // Default padding if notice is gone
+        });
+
+
+        // Smooth scroll for navigation links
+        document.querySelectorAll('nav a').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
 </body>
 </html>
